--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/Sergey-Firsov/news-explorer-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
